--- a/src/panels/demo_3.html
+++ b/src/panels/demo_3.html
@@ -28,8 +28,8 @@
         <div class="panel-heading">面板标题</div>
         <table class="table">
             <th>产品</th><th>价格 </th>
-            <tr><td>产品 A</td><td>200</td></tr>
-            <tr><td>产品 B</td><td>400</td></tr>
+            <tr><td>产品 A</td><td title="产品 A">200</td></tr>
+            <tr><td>产品 B</td><td title="产品 B">400</td></tr>
         </table>
     </div>
 </div>
