--- a/src/panels/demo_4.html
+++ b/src/panels/demo_4.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="main-container">
-    <h3>带列表组的面板</h3>
+    <h3 title="带列表组的面板">带列表组的面板</h3>
     <div class="panel panel-default">
         <div class="panel-heading">面板标题</div>
         <div class="panel-body">
