--- a/app/datagrid/demo_clean.html
+++ b/app/datagrid/demo_clean.html
@@ -9,11 +9,17 @@
 	<link rel="stylesheet" type="text/css" href="/easyui/themes/icon.css">
 	<script src="/easyui/jquery.min.js"></script>
 	<script src="/easyui/jquery.easyui.min.js"></script>
+
+	<style>
+		.datagrid-view {
+			min-height: 60px;
+		}
+	</style>
 </head>
 
 <body style="width: 80%;margin: 32px auto;">
 
-	<table id="dg" class="easyui-datagrid" title="清除Ajax获取的数据" style="width:700px;height:250px" data-options="singleSelect:true,collapsible:true,url:'datagrid_data1.json',method:'get',
+	<table id="dg" class="easyui-datagrid" title="清除Ajax获取的数据" style="width:700px;height:auto;" data-options="singleSelect:true,collapsible:true,url:'datagrid_data1.json',method:'get',
 							toolbar:'#tb'">
 		<thead>
 			<tr>
@@ -32,8 +38,8 @@
 
 	<div style="height: 25px;"></div>
 
-	<table id="dg2" class="easyui-datagrid" title="清除本地加载的数据" style="width:700px;height:250px"
-		data-options="singleSelect:true,collapsible:true,toolbar:'#tb2'">
+	<table id="dg2" class="easyui-datagrid" title="清除本地加载的数据" style="width:100%;height:auto;"
+		data-options="collapsible:true,toolbar:'#tb2'">
 		<thead>
 			<tr>
 				<th data-options="field:'itemid',width:80">Item ID</th>
@@ -74,7 +80,8 @@
 		}
 
 		function add_local() {
-			$('#dg2').datagrid('loadData', localData);
+			// $('#dg2').datagrid('loadData', localData);
+			$('#dg2').datagrid('loadData', {'rows': localData.rows});
 		}
 		function clean_local() {
 			console.log('data2 src: ', $('#dg2').datagrid('getData'));
@@ -87,7 +94,10 @@
 
 	<script>
 		$(function () {
-
+			$('#dg2').datagrid({
+				emptyMsg: '（暂无数据）'
+				// emptyMsg: '<span>无数据</span>'
+			});
 
 		});
 	</script>
